# operationalize

./: .gitignore  README.md  TODO.txt  pyproject.toml  test_load_state.json  test_save_state.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
ci/: ci.py
pm/: Goals.md  get_todos.py
src/operationalize/: TODO.txt  __about__.py  main.py  project.py
src/operationalize/static/: package-lock.json  package.json
src/operationalize/tasks/: design_plantuml.py  next_task.py  software_creation.py  split_work.py  task.py  task_from_git.py  task_persistence.py  task_selection.py  text_backend.py
src/operationalize/tasks/templates/: base_template.html  design_plantUML_workspace.html  index.html  option_selection_workspace.html  project_creation_form.html  split_text_workspace.html  text_workspace.html  waiting.html
src/operationalize/tasks/test/: test_rate_task_endpoint.py  test_rating_task.py  test_software_creation.py  test_split_work.py  test_task.py  test_task_from_git.py
src/operationalize/test/: test_main.py
